--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminNewOrdersActivity"></activity>
+        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".AdminNewOrdersActivity" />
         <activity android:name=".AdminAddNewProductActivity" />
         <activity android:name=".AdminCategoryActivity" />
         <activity android:name=".LoginActivity" />
